<resources>
    <string name="app_name">Mountain Views</string>
    <string name="login_user">Username</string>
    <string name="login_password">Password</string>
    <string name="login_in">Sign In</string>
    <string name="login_up">Sign Up</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_dialog">Signing in</string>
    <string name="login_wait">Please wait...</string>
    <string name="register_user">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_register">Sign up</string>
    <string name="home_pulling">Loading Account</string>
    <string name="home_dialog">Loading Feed</string>
    <string name="home_wait">Please wait...</string>
    <string name="home_search">Search</string>
    <string name="start_start">Start Trip</string>
    <string name="start_destination">Destination</string>
    <string name="start_myo">Please prepare to connect your Myo Armband.</string>
    <string name="start_myo_no">No Myo Armband will be used.</string>
    <string name="new_photo_label">New Photo</string>
    <string name="new_photo_button">Add Photo</string>
    <string name="new_photo_caption">Caption</string>
    <string name="new_photo_location">Location</string>
    <string name="new_report_label">New Report</string>
    <string name="new_report_title">Title</string>
    <string name="new_report_location">Location</string>
    <string name="new_report_distance">Distance</string>
    <string name="new_report_date">Date</string>
    <string name="new_report_report">Report</string>
    <string name="layout_report_expand">Tap here to read more...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
