<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/mvPrimary"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_logo"/>
    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_user"
        android:inputType="text"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="autouser"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="Qwertyu1"/>
    <Button
        android:id="@+id/login_in"
        android:layout_width="256dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content"
        android:background="@color/mvStatusBar"
        android:textColor="@color/white"
        android:text="@string/login_in"/>
    <Button
        android:id="@+id/login_up"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@color/mvStatusBar"
        android:textColor="@color/white"
        android:text="@string/login_up"/>
    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@color/mvStatusBar"
        android:textColor="@color/white"
        android:text="@string/login_forgot"/>

</LinearLayout>