<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mvPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/mvPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal"
            android:background="@color/mvStatusBar">
            <ImageView
                android:id="@+id/new_photo_cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_clear_white_48dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_photo_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:layout_weight="0"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/new_photo_done"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_done_white_48dp"
                android:layout_weight="0"/>
        </LinearLayout>
        <Button
            android:id="@+id/new_photo_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/mvStatusBar"
            android:text="@string/new_photo_button"
            android:textColor="@color/white"
            android:visibility="visible"/>
        <ImageView
            android:id="@+id/new_photo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/new_photo_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/new_photo_caption"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/new_photo_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/new_photo_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>