<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/mvPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/start_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"/>
    <EditText
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/start_destination"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"/>
    <ImageView
        android:layout_width="235dp"
        android:layout_height="256dp"
        android:layout_margin="32dp"
        android:src="@drawable/myo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/start_myo"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"/>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:src="@drawable/ic_home_white_48dp"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/ic_flag_white_48dp"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_bluetooth_white_48dp"/>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>