<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mvPrimary">
    <LinearLayout
        android:id="@+id/new_report_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/mvPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal"
            android:background="@color/mvStatusBar">
            <ImageView
                android:id="@+id/new_report_cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_clear_white_48dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_report_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white"
                android:layout_weight="0"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/new_report_done"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_done_white_48dp"
                android:layout_weight="0"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/new_report_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/new_report_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/mvStatusBar"
            android:text="@string/new_photo_button"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/new_report_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="start|top"
            android:layout_margin="16dp"
            android:hint="@string/new_report_report"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@color/white"
            android:minLines="16"/>
    </LinearLayout>
</ScrollView>